--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -275,7 +275,7 @@ main{
 
                     .recipe {
                         display: flex;
-                        gap: 10px;
+                        gap: 30px;
 
                         margin-top: 20px;
 
